editor.search warnings Resolved